# get-latest-repo

./: .dockerignore  .env.docker.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.en.md  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docker/: backend-entrypoint.sh  nginx.conf  volumes.manifest.json
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/scripts/: check-performance-budget.mjs
frontend/src/: main.tsx
frontend/src/api/: client.ts  contracts.test.ts  contracts.ts  events.ts
frontend/src/app/: App.tsx
frontend/src/components/: ConfigPanel.tsx  DialogProvider.test.tsx  DialogProvider.tsx  OperationBar.tsx  StatisticsGrid.tsx
frontend/src/features/repositories/: RepositoryRow.tsx  RepositoryTable.tsx
frontend/src/stores/: connection-store.ts  operation-store.test.ts  operation-store.ts  repository-store.test.ts  repository-store.ts
frontend/src/styles/: global.css
frontend/src/workers/: repository-index.test.ts  repository-index.ts  repository-index.worker.ts
scripts/: README.md  build-all.sh  clean-reports.sh  docker-test-ordinary.sh  docker-volume-lifecycle.py  docker-volume-provision.sh  install.sh  package.sh  release.sh  test-all.sh  verify-docker-volumes-ordinary.sh  verify-docker-volumes-persistence.sh  verify-docker-volumes.sh
src/: cli.rs  concurrent.rs  config.rs  db.rs  error.rs  fetcher.rs  git.rs  main.rs  models.rs  scanner.rs  security.rs  signal_handler.rs  sync.rs  tui.rs  utils.rs
src/commands/: config.rs  discard.rs  fetch.rs  init.rs  mod.rs  scan.rs  status.rs  tui.rs  workflow.rs
src/reporter/: html.rs  markdown.rs  mod.rs  terminal.rs
src/web/: assets.rs  dto.rs  events.rs  mod.rs  operations.rs
src/workflow/: executor.rs  mod.rs  types.rs
templates/: report.html
tests/: cli_smoke.rs
