[package]
name = "getlatestrepo"
version = "0.1.11"
edition = "2024"
rust-version = "1.85"
description = "A fast and elegant local Git repository manager written in Rust"
license = "AGPL-3.0-or-later"
repository = "https://github.com/xcjy8/GetLatestRepo"
authors = ["xcjy8"]
keywords = ["git", "cli", "repository-manager", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Git operations
git2 = "0.20"

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Async / Concurrency
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

# Terminal output
comfy-table = "7.1"
colored = "2.1"
indicatif = "0.18"  # progress bars

# HTML templates
askama = "0.12"

# Others
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.5"
regex = "1.10"

# Security scan
url = "2.5"
libc = "0.2.184"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
