[package]
name = "getlatestrepo"
version = "0.1.12"
edition = "2024"
rust-version = "1.97"
description = "快速、安全、实时的本地 Git 仓库管理器"
license = "AGPL-3.0-or-later"
repository = "https://github.com/xcjy8/GetLatestRepo"
authors = ["xcjy8"]
keywords = ["git", "cli", "repository-manager", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Git operations
git2 = { version = "0.21.0", features = ["https", "ssh"] }

# Database
rusqlite = { version = "0.40.1", features = ["bundled", "chrono"] }

# Async / Concurrency
tokio = { version = "1.52.3", features = ["full"] }
futures = "0.3.32"
async-stream = "0.3.6"

# Config
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.3"
dirs = "6.0.0"

# Terminal output
comfy-table = "7.2.2"
colored = "3.1.1"
indicatif = "0.18.6"

# HTML templates
askama = "0.16.0"

# 本地 Web 控制台
axum = "0.8.9"
tower-http = { version = "0.7.0", features = ["compression-br", "compression-gzip", "limit", "set-header"] }
rust-embed = "8.12.0"
mime_guess = "2.0.5"
uuid = { version = "1.23.5", features = ["v4", "serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
rfd = "0.17.2"

# Others
chrono = { version = "0.4.45", features = ["serde"] }
anyhow = "1.0.103"
thiserror = "2.0.18"
walkdir = "2.5.0"

# Security scan
url = "2.5.8"
libc = "0.2.186"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
